👤 Designated the project author

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "ValorantAPI",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT"
+	"name": "ValorantAPI",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": {
+		"email": "luis.sanchezz.vazquezz@gmail.com",
+		"name": "José Luis Sánchez Vázquez",
+		"url": "https://github.com/LobiLux-Dev"
+	},
+	"license": "MIT"
 }
