--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ValorantAPI",
 	"version": "1.0.0",
-	"description": "",
+	"description": "TypeScript library designed to facilitate the retrieval of data from the popular video game Valorant.",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
