--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ValorantAPI",
+	"name": "valorant-api",
 	"version": "1.0.0",
 	"description": "TypeScript library designed to facilitate the retrieval of data from the popular video game Valorant.",
 	"main": "index.js",
