--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
 	"name": "valorant-api",
 	"version": "1.0.0",
 	"description": "TypeScript library designed to facilitate the retrieval of data from the popular video game Valorant.",
-	"main": "index.js",
+	"main": "src/index.ts",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest",
+		"prepare": "husky install",
+		"format": "prettier --write ./src/"
 	},
 	"keywords": [],
 	"author": {
@@ -12,5 +14,17 @@
 		"name": "José Luis Sánchez Vázquez",
 		"url": "https://github.com/LobiLux-Dev"
 	},
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"@types/jest": "^29.5.6",
+		"@types/node": "^20.8.9",
+		"husky": "^8.0.3",
+		"jest": "^29.7.0",
+		"prettier": "^3.0.3",
+		"ts-jest": "^29.1.1",
+		"typescript": "^5.2.2"
+	},
+	"dependencies": {
+		"axios": "^1.6.0"
+	}
 }
